--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <spring.version>5.0.8.RELEASE</spring.version>
+        <common-io.version>2.6</common-io.version>
     </properties>
 
     <dependencies>
@@ -37,5 +38,12 @@
             <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${common-io.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
